app/buck2_query_derive/tests/ui/fn.stderr
error: `#[query_module(..)]` can only be used on impls
 --> tests/ui/fn.rs:4:1
  |
4 | fn foo(env: ()) {}
  | ^^^^^^^^^^^^^^^^^^
