app/buck2_query_derive/tests/ui/fn.rs
use buck2_query_derive::query_module;

#[query_module]
fn foo(env: ()) {}

fn main() {}
